--- a/app/src/main/res/layout/cardview_message.xml
+++ b/app/src/main/res/layout/cardview_message.xml
@@ -7,14 +7,15 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
-        android:layout_height="390dp"
+        android:layout_height="500dp"
         android:layout_centerInParent="true"
         app:cardBackgroundColor="@android:color/transparent"
         app:cardElevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="390dp"
+            android:layout_height="match_parent"
+            android:padding="15dp"
             android:background="@drawable/layout_rounded_cardview"
             android:orientation="vertical">
 
@@ -30,8 +31,8 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/animation_view"
-                android:layout_width="170dp"
-                android:layout_height="170dp"
+                android:layout_width="128dp"
+                android:layout_height="121dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 app:lottie_autoPlay="true"
@@ -40,7 +41,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="185dp"
                 android:layout_margin="20dp"
                 android:orientation="vertical">
 
@@ -58,25 +59,37 @@
                             android:id="@+id/textView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_margin="16dp"
+                            android:layout_margin="1dp"
                             android:gravity="center"
                             android:text="¡Listo!"
-                            android:textColor="@android:color/white"
-                            android:textSize="18sp" />
+                            android:textColor="@color/colorVerdeLimon"
+                            android:textSize="15sp" />
 
                         <TextView
                             android:id="@+id/textView2"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="5dp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="1dp"
                             android:gravity="center"
                             android:text="Has terminado de registrar las máquinas de esta sucursal"
                             android:textColor="@android:color/white"
-                            android:textSize="16sp" />
+                            android:textSize="15sp" />
                     </LinearLayout>
                 </ScrollView>
+
             </LinearLayout>
 
+            <Button
+                android:id="@+id/sucDoneButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/boton_redondo_verde"
+                android:elevation="80dp"
+                android:padding="10dp"
+                android:text="ENVIAR REGISTROS"
+                android:textSize="20dp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
