--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorBlack">#080708</color>
     <color name="colorVerdeLimon">#c3ca1f</color>
     <color name="colorVerdeAzul">#008080</color>
+    <color name="colorRojo">#FF0000</color>
 </resources>
